--- a/Frontend/html/login.html
+++ b/Frontend/html/login.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>KIKIKAL – Login</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>KIKIKAL_Login</title>
+    <link rel="stylesheet" href="../style/kikical.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet"/>
@@ -27,6 +27,8 @@
           <label>Password</label>
           <input type="password" id="password" placeholder="***********" />
         </div>
+
+        <div id="login-message" class="auth-message" aria-live="polite"></div>
         <button onclick="handleLogin()" class="btn">Sign In</button>
 
         <p class="signup">
@@ -34,6 +36,6 @@
         </p>
       </div>
     </div>
-    <script src="auth.js"></script>
+    <script src="../javascript/auth.js"></script>
   </body>
 </html>
