--- a/Frontend/html/dashboard.html
+++ b/Frontend/html/dashboard.html
@@ -10,31 +10,73 @@
 <body>
 
 <header class="nav">
-  <div class="nav-left">
-    <span class="logo-icon">🍽️</span>
-    <span class="logo-text">KIKIKAL</span>
-  </div>
+  <div class="nav-container">
+    <a href="dashboard.html" class="nav-left">
+      <div class="logo-icon">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"/>
+        </svg>
+      </div>
+      <span class="logo-text">KIKIKAL</span>
+    </a>
 
-  <nav class="nav-center">
-    <a href="#" class="nav-item active">Dashboard</a>
-    <a href="#" class="nav-item">Meals</a>
-    <a href="#" class="nav-item">Progress</a>
-    <a href="#" class="nav-item">Achievements</a>
-  </nav>
+    <nav class="nav-center">
+      <a href="dashboard.html" class="nav-item active">Dashboard</a>
+      <a href="meals.html" class="nav-item">Meals</a>
+      <a href="workouts.html" class="nav-item">Workouts</a>
+      <a href="achievements.html" class="nav-item">Achievements</a>
+    </nav>
 
-  <div class="nav-right">
-    <button>🔔</button>
-    <button>⚙️</button>
-    <button>👤</button>
+    <div class="nav-right">
+      <button class="nav-icon-btn">
+        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9M13.73 21a2 2 0 0 1-3.46 0"/>
+        </svg>
+      </button>
+      <button class="nav-icon-btn">
+        <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path d="M12 15a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+          <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1Z"/>
+        </svg>
+      </button>
+      <div class="profile-dropdown">
+        <button class="nav-icon-btn" id="profile-btn">
+          <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+            <circle cx="12" cy="7" r="4"/>
+          </svg>
+        </button>
+        <div class="dropdown-menu" id="profile-menu">
+          <a href="profile.html" class="dropdown-item">
+            <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+              <circle cx="12" cy="7" r="4"/>
+            </svg>
+            Profile
+          </a>
+          <button class="dropdown-item" id="logout-btn">
+            <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/>
+              <polyline points="16 17 21 12 16 7"/>
+              <line x1="21" y1="12" x2="9" y2="12"/>
+            </svg>
+            Logout
+          </button>
+        </div>
+      </div>
+    </div>
   </div>
 </header>
 
 <main class="dashboard">
 
   <!-- GREETING -->
-  <section class="greeting">
-    <h2 id="greet-title">Good afternoon, FRAME!</h2>
-    <p class="sub">Let’s make today a healthy one</p>
+  <section class="greeting-header">
+    <div>
+      <h2 id="greet-title">Good afternoon, FRAME!</h2>
+      <p class="sub">Let’s make today a healthy one</p>
+    </div>
+    <button class="edit-profile-btn">Edit Profile</button>
   </section>
 
   <!-- TOP GRID -->
@@ -45,37 +87,58 @@
       <h3 class="card-title">Today's Summary</h3>
 
       <div class="circle-col">
-        <div class="circle">0</div>
-        <p class="circle-caption">net calories<br>of 3,200 goal</p>
+        <div class="circle" id="cal-circle"><span id="cal-text" class="circle-inner-text">0</span></div>
+        <p class="circle-caption">net calories<br>of <span id="cal-goal">3,200</span> goal</p>
       </div>
 
       <div class="summary-right">
         <div class="sum-row">
-          <div><span class="num">0</span><p>Consumed</p></div>
-          <div><span class="num">0</span><p>Exercise</p></div>
-          <div><span class="num big">3200</span><p>Remaining</p></div>
+          <div class="stat-card bg-green">
+            <span class="num" id="val-consumed">0</span>
+            <p>Consumed</p>
+          </div>
+          <div class="stat-card bg-red">
+            <span class="num" id="val-burned">0</span>
+            <p>Exercise</p>
+          </div>
+          <div class="stat-card bg-gray">
+            <span class="num big" id="val-remaining">3200</span>
+            <p>Remaining</p>
+          </div>
         </div>
 
         <div class="macro-box">
           <p class="macro-title">Macros Today</p>
           <div class="macro-row">
-            <span>0g Protein</span>
-            <span>0g Carbs</span>
-            <span>0g Fat</span>
+            <span id="macro-p">0g Protein</span>
+            <span id="macro-c">0g Carbs</span>
+            <span id="macro-f">0g Fat</span>
           </div>
         </div>
 
         <div class="progress-bar">
-          <div class="progress-fill" style="width:0%"></div>
+          <div class="progress-fill" id="cal-progress" style="width:0%"></div>
         </div>
-        <p class="progress-label">0%</p>
+        <p class="progress-label" id="cal-percent">0%</p>
       </div>
     </div>
 
     <!-- ACTIONS RIGHT -->
     <div class="actions">
-      <button class="action green">➕ Log Meal</button>
-      <button class="action red">➕ Log Workout</button>
+      <button class="action-card green" id="btn-log-meal">
+        <div class="action-icon">➕</div>
+        <div class="action-text">
+          <span class="act-title">Log Meal</span>
+          <span class="act-desc">Track your nutrition</span>
+        </div>
+      </button>
+      <button class="action-card red" id="btn-log-workout">
+        <div class="action-icon">➕</div>
+        <div class="action-text">
+          <span class="act-title">Log Workout</span>
+          <span class="act-desc">Track your exercise</span>
+        </div>
+      </button>
 
       <div class="motivation">
         <h4>Daily Motivation</h4>
@@ -92,27 +155,39 @@
     <div class="insight-grid">
 
       <div class="insight-card">
-        <p class="ins-title">Nutrition Score</p>
-        <h2 class="main">8.2/10</h2>
-        <p class="small">Good job keng na!</p>
+        <div class="ins-icon bg-green-light">📈</div>
+        <div class="ins-content">
+          <p class="ins-title">Nutrition Score</p>
+          <h2 class="main">8.2/10</h2>
+          <p class="small">Good job keng na!</p>
+        </div>
       </div>
 
       <div class="insight-card">
-        <p class="ins-title">Hydration</p>
-        <h2 class="main">6/8 glasses</h2>
-        <p class="small">2 more to go</p>
+        <div class="ins-icon bg-blue-light">💧</div>
+        <div class="ins-content">
+          <p class="ins-title">Hydration</p>
+          <h2 class="main">6/8 glasses</h2>
+          <p class="small">2 more to go</p>
+        </div>
       </div>
 
       <div class="insight-card">
-        <p class="ins-title">Badges Earned</p>
-        <h2 class="main">0</h2>
-        <p class="small">Keep it up!</p>
+        <div class="ins-icon bg-pink-light">🏵️</div>
+        <div class="ins-content">
+          <p class="ins-title">Badges Earned</p>
+          <h2 class="main">0</h2>
+          <p class="small">Keep it up!</p>
+        </div>
       </div>
 
       <div class="insight-card">
-        <p class="ins-title">Active Challenges</p>
-        <h2 class="main">3</h2>
-        <p class="small">In progress</p>
+        <div class="ins-icon bg-orange-light">🎯</div>
+        <div class="ins-content">
+          <p class="ins-title">Active Challenges</p>
+          <h2 class="main">3</h2>
+          <p class="small">In progress</p>
+        </div>
       </div>
 
     </div>
@@ -120,5 +195,7 @@
 
 </main>
 
+<script src="../javascript/logout.js"></script>
+<script src="../javascript/dashboard.js"></script>
 </body>
 </html>
