--- a/Frontend/html/dashboard.html
+++ b/Frontend/html/dashboard.html
@@ -155,38 +155,38 @@
     <div class="insight-grid">
 
       <div class="insight-card">
-        <div class="ins-icon bg-green-light">📈</div>
+        <div class="ins-icon bg-green-light">🥩</div>
         <div class="ins-content">
-          <p class="ins-title">Nutrition Score</p>
-          <h2 class="main">8.2/10</h2>
-          <p class="small">Good job keng na!</p>
+          <p class="ins-title">Protein Balance Today</p>
+          <h2 class="main" id="ins-protein-main">0%</h2>
+          <p class="small" id="ins-protein-sub">0g / 0g</p>
         </div>
       </div>
 
       <div class="insight-card">
-        <div class="ins-icon bg-blue-light">💧</div>
+        <div class="ins-icon bg-blue-light">⚖️</div>
         <div class="ins-content">
-          <p class="ins-title">Hydration</p>
-          <h2 class="main">6/8 glasses</h2>
-          <p class="small">2 more to go</p>
+          <p class="ins-title">Carb/Fat Balance</p>
+          <h2 class="main" id="ins-carbfat-main">0% / 0%</h2>
+          <p class="small" id="ins-carbfat-sub">carb vs fat to target</p>
         </div>
       </div>
 
       <div class="insight-card">
-        <div class="ins-icon bg-pink-light">🏵️</div>
+        <div class="ins-icon bg-pink-light">📅</div>
         <div class="ins-content">
-          <p class="ins-title">Badges Earned</p>
-          <h2 class="main">0</h2>
-          <p class="small">Keep it up!</p>
+          <p class="ins-title">Logging Streak</p>
+          <h2 class="main" id="ins-streak-main">0 days</h2>
+          <p class="small" id="ins-streak-sub">Keep it going!</p>
         </div>
       </div>
 
       <div class="insight-card">
-        <div class="ins-icon bg-orange-light">🎯</div>
+        <div class="ins-icon bg-orange-light">🏅</div>
         <div class="ins-content">
-          <p class="ins-title">Active Challenges</p>
-          <h2 class="main">3</h2>
-          <p class="small">In progress</p>
+          <p class="ins-title">Latest Badge</p>
+          <h2 class="main" id="ins-badge-main">None yet</h2>
+          <p class="small" id="ins-badge-sub">Complete goals to unlock</p>
         </div>
       </div>
 
