Add new UI components

--- a/Frontend/html/achievements.html
+++ b/Frontend/html/achievements.html
@@ -68,7 +68,7 @@
     </div>
   </header>
 
-  <main class="dashboard" style="padding-top: 100px;">
+  <main class="dashboard">
     <div class="meals-header-row">
       <div>
         <h1 class="page-title">Achievements</h1>
