--- a/Frontend/html/dashboard.html
+++ b/Frontend/html/dashboard.html
@@ -88,7 +88,7 @@
 
       <div class="circle-col">
         <div class="circle" id="cal-circle"><span id="cal-text" class="circle-inner-text">0</span></div>
-        <p class="circle-caption">net calories<br>of <span id="cal-goal">3,200</span> goal</p>
+        <p class="circle-caption">net calories of <span id="cal-goal">3,200</span> goal</p>
       </div>
 
       <div class="summary-right">
@@ -126,14 +126,14 @@
     <!-- ACTIONS RIGHT -->
     <div class="actions">
       <button class="action-card green" id="btn-log-meal">
-        <div class="action-icon">➕</div>
+        <div class="action-icon">✚</div>
         <div class="action-text">
           <span class="act-title">Log Meal</span>
           <span class="act-desc">Track your nutrition</span>
         </div>
       </button>
       <button class="action-card red" id="btn-log-workout">
-        <div class="action-icon">➕</div>
+        <div class="action-icon">✚</div>
         <div class="action-text">
           <span class="act-title">Log Workout</span>
           <span class="act-desc">Track your exercise</span>
