--- a/Frontend/html/workouts.html
+++ b/Frontend/html/workouts.html
@@ -70,7 +70,7 @@
     </header>
 
     <!-- Main Content -->
-    <div class="dashboard" style="padding-top: 100px;">
+    <div class="dashboard">
         <!-- Header Section -->
         <div class="meals-header-row">
             <div>
