--- a/Frontend/html/meals.html
+++ b/Frontend/html/meals.html
@@ -69,7 +69,7 @@
         </div>
     </header>
 
-    <div class="dashboard" style="padding-top: 100px;">
+    <div class="dashboard">
         
         <!-- Header Section -->
         <div class="meals-header-row">
