--- a/Frontend/html/achievements.html
+++ b/Frontend/html/achievements.html
@@ -28,13 +28,32 @@
       </nav>
 
       <div class="nav-right">
-        <button class="nav-icon-btn">
-          <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9M13.73 21a2 2 0 0 1-3.46 0"/>
+                <button
+                  class="nav-toggle"
+                  id="nav-toggle"
+                  aria-label="Open menu"
+                  aria-expanded="false"
+                >
+                  ☰
+                </button>
+        <button class="nav-icon-btn" id="theme-toggle">
+          <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" id="sun-icon">
+            <circle cx="12" cy="12" r="5"/>
+            <line x1="12" y1="1" x2="12" y2="3"/>
+            <line x1="12" y1="21" x2="12" y2="23"/>
+            <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/>
+            <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/>
+            <line x1="1" y1="12" x2="3" y2="12"/>
+            <line x1="21" y1="12" x2="23" y2="12"/>
+            <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/>
+            <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/>
+          </svg>
+          <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" id="moon-icon" style="display: none;">
+            <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
           </svg>
         </button>
-        <button class="nav-icon-btn">
-          <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+        <button class="nav-icon-btn" id="settings-btn">
+          <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
             <path d="M12 15a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
             <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1Z"/>
           </svg>
@@ -68,7 +87,22 @@
     </div>
   </header>
 
-  <main class="dashboard" style="padding-top: 100px;">
+  <!-- Mobile/Tablet Navigation Drawer -->
+  <div class="nav-drawer" id="nav-drawer" aria-hidden="true">
+    <div class="drawer-content">
+      <a href="dashboard.html" class="drawer-item">Dashboard</a>
+      <a href="meals.html" class="drawer-item">Meals</a>
+      <a href="workouts.html" class="drawer-item">Workouts</a>
+      <a href="achievements.html" class="drawer-item active">Achievements</a>
+      <a href="profile.html" class="drawer-item">Profile</a>
+      <button class="drawer-item" id="drawer-theme-toggle">Dark Mode</button>
+      <div class="drawer-spacer"></div>
+      <button class="drawer-item" id="drawer-logout">Logout</button>
+    </div>
+    <div class="drawer-backdrop" id="drawer-backdrop"></div>
+  </div>
+
+  <main class="dashboard">
     <div class="meals-header-row">
       <div>
         <h1 class="page-title">Achievements</h1>
@@ -99,6 +133,7 @@
     </section>
   </main>
 
+  <script src="../javascript/theme.js"></script>
   <script src="../javascript/logout.js"></script>
   <script src="../javascript/achievements.js"></script>
 </body>
