--- a/Frontend/html/login.html
+++ b/Frontend/html/login.html
@@ -25,7 +25,7 @@
         </div>
         <div class="from_group">
           <label>Password</label>
-          <input type="password" id="password" placeholder="***********" />
+          <input type="password" id="password" placeholder="••••••••••••" />
         </div>
 
         <div id="login-message" class="auth-message" aria-live="polite"></div>
