--- a/Frontend/html/workouts.html
+++ b/Frontend/html/workouts.html
@@ -29,13 +29,32 @@
             </nav>
 
             <div class="nav-right">
-                <button class="nav-icon-btn">
-                    <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-                        <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9M13.73 21a2 2 0 0 1-3.46 0"/>
+                <button
+                    class="nav-toggle"
+                    id="nav-toggle"
+                    aria-label="Open menu"
+                    aria-expanded="false"
+                >
+                    ☰
+                </button>
+                <button class="nav-icon-btn" id="theme-toggle">
+                    <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" id="sun-icon">
+                        <circle cx="12" cy="12" r="5"/>
+                        <line x1="12" y1="1" x2="12" y2="3"/>
+                        <line x1="12" y1="21" x2="12" y2="23"/>
+                        <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/>
+                        <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/>
+                        <line x1="1" y1="12" x2="3" y2="12"/>
+                        <line x1="21" y1="12" x2="23" y2="12"/>
+                        <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/>
+                        <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/>
+                    </svg>
+                    <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" id="moon-icon" style="display: none;">
+                        <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
                     </svg>
                 </button>
-                <button class="nav-icon-btn">
-                    <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                <button class="nav-icon-btn" id="settings-btn">
+                    <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
                         <path d="M12 15a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
                         <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1Z"/>
                     </svg>
@@ -69,8 +88,23 @@
         </div>
     </header>
 
+    <!-- Mobile/Tablet Navigation Drawer -->
+    <div class="nav-drawer" id="nav-drawer" aria-hidden="true">
+        <div class="drawer-content">
+            <a href="dashboard.html" class="drawer-item">Dashboard</a>
+            <a href="meals.html" class="drawer-item">Meals</a>
+            <a href="workouts.html" class="drawer-item active">Workouts</a>
+            <a href="achievements.html" class="drawer-item">Achievements</a>
+            <a href="profile.html" class="drawer-item">Profile</a>
+            <button class="drawer-item" id="drawer-theme-toggle">Dark Mode</button>
+            <div class="drawer-spacer"></div>
+            <button class="drawer-item" id="drawer-logout">Logout</button>
+        </div>
+        <div class="drawer-backdrop" id="drawer-backdrop"></div>
+    </div>
+
     <!-- Main Content -->
-    <div class="dashboard" style="padding-top: 100px;">
+    <div class="dashboard">
         <!-- Header Section -->
         <div class="meals-header-row">
             <div>
@@ -80,9 +114,9 @@
             <button class="kiki-btn kiki-btn-green" id="btn-log-workout">+ Log Workout</button>
         </div>
 
-        <!-- Today's Summary -->
+        <!-- Today's Activity & Quick Log -->
         <div class="card search-card">
-            <h2 class="card-title">Today's Activity</h2>
+            <h2 class="page-card-title">Today's Activity</h2>
             <div class="workout-summary">
                 <div class="summary-item">
                     <div class="summary-label">Total Burned</div>
@@ -100,18 +134,17 @@
                     <div class="summary-unit">min</div>
                 </div>
             </div>
-        </div>
 
-        <!-- Quick Log Shortcuts -->
-        <div class="card search-card">
-            <h2 class="card-title">Quick Log</h2>
-            <div class="quick-workout-grid">
-                <button class="tag-btn" onclick="quickLog('Running', 300, 30)">🏃 Running<br><small>300 kcal/30min</small></button>
-                <button class="tag-btn" onclick="quickLog('Cycling', 250, 30)">🚴 Cycling<br><small>250 kcal/30min</small></button>
-                <button class="tag-btn" onclick="quickLog('Swimming', 400, 30)">🏊 Swimming<br><small>400 kcal/30min</small></button>
-                <button class="tag-btn" onclick="quickLog('Yoga', 150, 30)">🧘 Yoga<br><small>150 kcal/30min</small></button>
-                <button class="tag-btn" onclick="quickLog('Weight Training', 220, 30)">🏋️ Weights<br><small>220 kcal/30min</small></button>
-                <button class="tag-btn" onclick="quickLog('Walking', 120, 30)">🚶 Walking<br><small>120 kcal/30min</small></button>
+            <div class="quick-search">
+                <span class="quick-label">⚡ Quick Log</span>
+                <div class="quick-tags">
+                    <button class="tag-btn" onclick="quickLog('Running', 300, 30)">🏃 Running</button>
+                    <button class="tag-btn" onclick="quickLog('Cycling', 250, 30)">🚴 Cycling</button>
+                    <button class="tag-btn" onclick="quickLog('Swimming', 400, 30)">🏊 Swimming</button>
+                    <button class="tag-btn" onclick="quickLog('Yoga', 150, 30)">🧘 Yoga</button>
+                    <button class="tag-btn" onclick="quickLog('Weight Training', 220, 30)">🏋️ Weights</button>
+                    <button class="tag-btn" onclick="quickLog('Walking', 120, 30)">🚶 Walking</button>
+                </div>
             </div>
         </div>
 
@@ -173,6 +206,7 @@
         </div>
     </div>
 
+  <script src="../javascript/theme.js"></script>
   <script src="../javascript/logout.js"></script>
   <script src="../javascript/notifications.js"></script>
   <script src="../javascript/workouts.js"></script>
