--- a/Frontend/html/login.html
+++ b/Frontend/html/login.html
@@ -21,11 +21,11 @@
 
         <div class="from_group">
           <label>Email</label>
-        <input type="email" id="email" placeholder="you@example.com" />
+        <input type="email" id="email" placeholder="you@example.com" autocomplete="email" />
         </div>
         <div class="from_group">
           <label>Password</label>
-          <input type="password" id="password" placeholder="••••••••••••" />
+          <input type="password" id="password" placeholder="••••••••••••" autocomplete="current-password" />
         </div>
 
         <div id="login-message" class="auth-message" aria-live="polite"></div>
