--- a/Frontend/html/register.html
+++ b/Frontend/html/register.html
@@ -29,23 +29,23 @@
           <div class="from_group" id="reg_form_row">
             <div class="from_group-inner">
               <label class="label-fullname">Full name</label>
-              <input type="text" id="reg-name" class="input fullname" placeholder="Your name" />
+              <input type="text" id="reg-name" class="input fullname" placeholder="Your name" autocomplete="name" />
             </div>
 
             <div class="from_group-inner2">
               <label class="label-email">Email</label>
-              <input type="email" id="reg-email" class="input email" placeholder="you@example.com" />
+              <input type="email" id="reg-email" class="input email" placeholder="you@example.com" autocomplete="email" />
             </div>
           </div>
 
           <div class="from_group">
             <label class="label-password">Password</label>
-            <input type="password" id="reg-password" class="input password" placeholder="***********" />
+            <input type="password" id="reg-password" class="input password" placeholder="***********" autocomplete="new-password" />
           </div>
 
           <div class="from_group">
             <label class="label-cpassword">Confirm Password</label>
-            <input type="password" id="reg-cpassword" class="input cpassword" placeholder="***********" />
+            <input type="password" id="reg-cpassword" class="input cpassword" placeholder="***********" autocomplete="new-password" />
           </div>
 
           <div id="register-message" class="auth-message" aria-live="polite"></div>
