Present project complete

--- a/Frontend/html/dashboard.html
+++ b/Frontend/html/dashboard.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KIKIKAL Dashboard</title>
   <link rel="stylesheet" href="../style/kikical.css">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;800&display=swap" rel="stylesheet">
