--- a/Frontend/html/predashboard.html
+++ b/Frontend/html/predashboard.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>KIKIKAL_Pre_Dashboard</title>
     <link rel="stylesheet" href="../style/kikical.css" />
     <link
